Bug 1756186 - Fix Canvas2D CreatePattern and DrawImage with no context OffscreenCanvas. r=lsalzman

This patch ensures we return an empty surface as per the spec when
the OffscreenCanvas passed into CreatePattern and DrawImage has no
context bound to it.

Differential Revision: https://phabricator.services.mozilla.com/D139127