dom/canvas/CanvasRenderingContext2D.cpp
@@ -302,12 +302,9 @@ class CanvasGeneralPattern {
           gradient->mCenter, gradient->mAngle, 0, 1,
           gradient->GetGradientStopsForTarget(aRT));
     } else if (state.patternStyles[aStyle]) {
-      if (aCtx->mCanvasElement) {
-        CanvasUtils::DoDrawImageSecurityCheck(
-            aCtx->mCanvasElement, state.patternStyles[aStyle]->mPrincipal,
-            state.patternStyles[aStyle]->mForceWriteOnly,
-            state.patternStyles[aStyle]->mCORSUsed);
-      }
+      aCtx->DoSecurityCheck(state.patternStyles[aStyle]->mPrincipal,
+                            state.patternStyles[aStyle]->mForceWriteOnly,
+                            state.patternStyles[aStyle]->mCORSUsed);
 
       ExtendMode mode;
       if (state.patternStyles[aStyle]->mRepeat ==
@@ -2154,7 +2151,9 @@ already_AddRefed<CanvasPattern> CanvasRenderingContext2D::CreatePattern(
     return nullptr;
   }
 
-  Element* element;
+  Element* element = nullptr;
+  OffscreenCanvas* offscreenCanvas = nullptr;
+
   if (aSource.IsHTMLCanvasElement()) {
     HTMLCanvasElement* canvas = &aSource.GetAsHTMLCanvasElement();
     element = canvas;
@@ -2200,9 +2199,9 @@ already_AddRefed<CanvasPattern> CanvasRenderingContext2D::CreatePattern(
         mozilla::dom::HTMLVideoElement::CallerAPI::CREATE_PATTERN);
     element = &video;
   } else if (aSource.IsOffscreenCanvas()) {
-    OffscreenCanvas& canvas = aSource.GetAsOffscreenCanvas();
+    offscreenCanvas = &aSource.GetAsOffscreenCanvas();
 
-    nsIntSize size = canvas.GetWidthHeight();
+    nsIntSize size = offscreenCanvas->GetWidthHeight();
     if (size.width == 0) {
       aError.ThrowInvalidStateError("Passed-in canvas has width 0");
       return nullptr;
@@ -2213,23 +2212,22 @@ already_AddRefed<CanvasPattern> CanvasRenderingContext2D::CreatePattern(
       return nullptr;
     }
 
-    nsICanvasRenderingContextInternal* srcCanvas = canvas.GetContext();
-    if (!srcCanvas) {
-      aError.ThrowInvalidStateError("Passed-in canvas has no context");
-      return nullptr;
+    nsICanvasRenderingContextInternal* srcCanvas =
+        offscreenCanvas->GetContext();
+    if (srcCanvas) {
+      RefPtr<SourceSurface> srcSurf = srcCanvas->GetSurfaceSnapshot();
+      if (!srcSurf) {
+        aError.ThrowInvalidStateError(
+            "Passed-in canvas failed to create snapshot");
+        return nullptr;
+      }
+
+      RefPtr<CanvasPattern> pat =
+          new CanvasPattern(this, srcSurf, repeatMode, nullptr,
+                            offscreenCanvas->IsWriteOnly(), false);
+
+      return pat.forget();
     }
-
-    RefPtr<SourceSurface> srcSurf = srcCanvas->GetSurfaceSnapshot();
-    if (!srcSurf) {
-      aError.ThrowInvalidStateError(
-          "Passed-in canvas failed to create snapshot");
-      return nullptr;
-    }
-
-    RefPtr<CanvasPattern> pat = new CanvasPattern(
-        this, srcSurf, repeatMode, nullptr, canvas.IsWriteOnly(), false);
-
-    return pat.forget();
   } else {
     // Special case for ImageBitmap
     ImageBitmap& imgBitmap = aSource.GetAsImageBitmap();
@@ -2265,7 +2263,10 @@ already_AddRefed<CanvasPattern> CanvasRenderingContext2D::CreatePattern(
   auto flags = nsLayoutUtils::SFE_WANT_FIRST_FRAME_IF_IMAGE |
                nsLayoutUtils::SFE_EXACT_SIZE_SURFACE;
   SurfaceFromElementResult res =
-      nsLayoutUtils::SurfaceFromElement(element, flags, mTarget);
+      offscreenCanvas
+          ? nsLayoutUtils::SurfaceFromOffscreenCanvas(offscreenCanvas, flags,
+                                                      mTarget)
+          : nsLayoutUtils::SurfaceFromElement(element, flags, mTarget);
 
   // Per spec, we should throw here for the HTMLImageElement and SVGImageElement
   // cases if the image request state is "broken".  In terms of the infromation
@@ -4573,8 +4574,8 @@ void CanvasRenderingContext2D::DrawImage(const CanvasImageSource& aImage,
   RefPtr<SourceSurface> srcSurf;
   gfx::IntSize imgSize;
   gfx::IntSize intrinsicImgSize;
-
   Element* element = nullptr;
+  OffscreenCanvas* offscreenCanvas = nullptr;
 
   EnsureTarget();
   if (!IsTargetValid()) {
@@ -4593,17 +4594,20 @@ void CanvasRenderingContext2D::DrawImage(const CanvasImageSource& aImage,
       SetWriteOnly();
     }
   } else if (aImage.IsOffscreenCanvas()) {
-    OffscreenCanvas& canvas = aImage.GetAsOffscreenCanvas();
-    srcSurf = canvas.GetSurfaceSnapshot();
-    if (!srcSurf) {
-      return;
+    offscreenCanvas = &aImage.GetAsOffscreenCanvas();
+    nsIntSize size = offscreenCanvas->GetWidthHeight();
+    if (size.IsEmpty()) {
+      return aError.ThrowInvalidStateError("Passed-in canvas is empty");
     }
 
-    if (canvas.IsWriteOnly()) {
+    srcSurf = offscreenCanvas->GetSurfaceSnapshot();
+    if (srcSurf) {
+      imgSize = intrinsicImgSize = srcSurf->GetSize();
+    }
+
+    if (offscreenCanvas->IsWriteOnly()) {
       SetWriteOnly();
     }
-
-    imgSize = intrinsicImgSize = srcSurf->GetSize();
   } else if (aImage.IsImageBitmap()) {
     ImageBitmap& imageBitmap = aImage.GetAsImageBitmap();
     srcSurf = imageBitmap.PrepareForDrawTarget(mTarget);
@@ -4648,11 +4652,15 @@ void CanvasRenderingContext2D::DrawImage(const CanvasImageSource& aImage,
                         nsLayoutUtils::SFE_NO_RASTERIZING_VECTORS |
                         nsLayoutUtils::SFE_EXACT_SIZE_SURFACE;
 
-    SurfaceFromElementResult res =
-        CanvasRenderingContext2D::CachedSurfaceFromElement(element);
-
-    if (!res.mSourceSurface) {
-      res = nsLayoutUtils::SurfaceFromElement(element, sfeFlags, mTarget);
+    SurfaceFromElementResult res;
+    if (offscreenCanvas) {
+      res = nsLayoutUtils::SurfaceFromOffscreenCanvas(offscreenCanvas, sfeFlags,
+                                                      mTarget);
+    } else {
+      res = CanvasRenderingContext2D::CachedSurfaceFromElement(element);
+      if (!res.mSourceSurface) {
+        res = nsLayoutUtils::SurfaceFromElement(element, sfeFlags, mTarget);
+      }
     }
 
     if (!res.mSourceSurface && !res.mDrawInfo.mImgContainer) {
@@ -4673,11 +4681,7 @@ void CanvasRenderingContext2D::DrawImage(const CanvasImageSource& aImage,
 
     imgSize = res.mSize;
     intrinsicImgSize = res.mIntrinsicSize;
-
-    if (mCanvasElement) {
-      CanvasUtils::DoDrawImageSecurityCheck(mCanvasElement, res.mPrincipal,
-                                            res.mIsWriteOnly, res.mCORSUsed);
-    }
+    DoSecurityCheck(res.mPrincipal, res.mIsWriteOnly, res.mCORSUsed);
 
     if (res.mSourceSurface) {
       if (res.mImageRequest) {
